fixed the navbar on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -494,6 +494,7 @@ body {
 
 .topNav ul {
     flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .topNav li {
